Constant detail shoud not allow some options.. #40342

Closed
opened 2014-05-24 18:20:24 +02:00 by Angel Pat · 21 comments

When you activate constant detail while scultpting the options to subdivide collapse, subdivide edges and collapse edges makes not sense (they don't work either so..) to have them activated is a bit confusing when they are activated and do nothing, I now this is an expected behaviour but those tree options should be active only when relative detail is enabled.

When you activate constant detail while scultpting the options to subdivide collapse, subdivide edges and collapse edges makes not sense (they don't work either so..) to have them activated is a bit confusing when they are activated and do nothing, I now this is an expected behaviour but those tree options should be active only when relative detail is enabled.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AngelPat

Added subscriber: @AngelPat
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-05-24 21:11:24 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Antony, it’s in your area iirc?

Antony, it’s in your area iirc?

Nope. They are all useful and are functional in both modes. If they are not functional it is a bug and should be demonstrated somehow (test file).

Nope. They are all useful and are functional in both modes. If they are not functional it is a bug and should be demonstrated somehow (test file).
Author

Hello, here I leave an example, try to activate constant detail and then any option from subdivide edges to subdivide collapse, apparently collapse edeges works, but now another option doesn't work, Shade Smooth while sculpting, tested with Blender 2.70-b33d83b-win64

TestFile.rar

Hello, here I leave an example, try to activate constant detail and then any option from subdivide edges to subdivide collapse, apparently collapse edeges works, but now another option doesn't work, Shade Smooth while sculpting, tested with Blender 2.70-b33d83b-win64 [TestFile.rar](https://archive.blender.org/developer/F91200/TestFile.rar)

Can't confirm that here, all options seem to work. Can you try opening with factory settings? Maybe there's an option influencing this.

Can't confirm that here, all options seem to work. Can you try opening with factory settings? Maybe there's an option influencing this.
Author

hello, yes, I guess something was bad on my start up file, now it works, thanks

hello, yes, I guess something was bad on my start up file, now it works, thanks

Nice! If you can find what option caused this I will be able to fix the issue.

Nice! If you can find what option caused this I will be able to fix the issue.
Author

Hi, this is really strange,it happened again with a fresh buildbot download....I will upload a video showing this anomaly..

Hi, this is really strange,it happened again with a fresh buildbot download....I will upload a video showing this anomaly..

Yep, please do, it's serious if something like that can occur

Yep, please do, it's serious if something like that can occur
Author

Hello, as promised here is the video showing this anomaly, now with a build from today..2.70-7fb33e5-win64

https://www.youtube.com/watch?v=c8Rqv1iAKmQ

please watch at 1080

So, my question is....this is an expected behaviour? notice how I check/uncheck the Shade smooth option and nothing happens...

Hello, as promised here is the video showing this anomaly, now with a build from today..2.70-7fb33e5-win64 https://www.youtube.com/watch?v=c8Rqv1iAKmQ please watch at 1080 So, my question is....this is an expected behaviour? notice how I check/uncheck the Shade smooth option and nothing happens...

I still can't see the error here. By the way what graphics card do you have there?

I still can't see the error here. By the way what graphics card do you have there?

This should not be happening at all unless there's some sort of data corruption. All those flags are stored at the same integer in memory. The weird thing is that if the display is correct it's almost impossible for the flags internally to be something else entirely.

Question, are you using buildbot builds? If you are using experimental builds there's a chance someone may have tweaked the flags and made them malfunctioning somehow.

Just for testing purposes I have uploaded a file saved on my machine. Can you test if those options still do not operate?

Apart from graphics card can you give full system specs? (graphics card driver would be good to know but also operating system, CPU, is it 64 bit, memory, etc)

This should not be happening at all unless there's some sort of data corruption. All those flags are stored at the same integer in memory. The weird thing is that if the display is correct it's almost impossible for the flags internally to be something else entirely. Question, are you using buildbot builds? If you are using experimental builds there's a chance someone may have tweaked the flags and made them malfunctioning somehow. Just for testing purposes I have uploaded a file saved on my machine. Can you test if those options still do not operate? Apart from graphics card can you give full system specs? (graphics card driver would be good to know but also operating system, CPU, is it 64 bit, memory, etc)

dyntopo_constant1.blend.rar

I had issues uploading the file, here it is.

[dyntopo_constant1.blend.rar](https://archive.blender.org/developer/F92047/dyntopo_constant1.blend.rar) I had issues uploading the file, here it is.
Author

Hello, the error is that Shade Smooth while dynamic sculpting is active doesn't work, simply can't smooth the surface unless I enter to edit mode, select all and shade smooth from specials (w key). And yes I'm using buildbot builds, this doesn't happen in official 2.70a, my system specs are:

OS: Win 7 64Bit SP1
RAM: 16gb
SSD: Samsung 256gb
CPU: FX 8350
GPU: GTX 590 Classified (tested with SLI enabled/disabled) driver latest 337.38

PD. Your uploaded file is still not working on buildbot builds, works on official 2.70a.

Hello, the error is that Shade Smooth while dynamic sculpting is active doesn't work, simply can't smooth the surface unless I enter to edit mode, select all and shade smooth from specials (w key). And yes I'm using buildbot builds, this doesn't happen in official 2.70a, my system specs are: OS: Win 7 64Bit SP1 RAM: 16gb SSD: Samsung 256gb CPU: FX 8350 GPU: GTX 590 Classified (tested with SLI enabled/disabled) driver latest 337.38 PD. Your uploaded file is still not working on buildbot builds, works on official 2.70a.

I can confirm the issue on official test build.

I can confirm the issue on official test build.

Looks like a MSVC only issue, MinGW does not have this.

Looks like a MSVC only issue, MinGW does not have this.

This issue was referenced by d4c078b887

This issue was referenced by d4c078b887adef4697c74e9c340525189f2fb2d6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d4c078b887.

Closed by commit d4c078b887.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40342
No description provided.